examples/gke-gateway-controller/site.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-v1
  namespace: site-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: site
      version: v1
  template:
    metadata:
      labels:
        app: site
        version: v1
    spec:
      containers:
      - name: whereami
        image: gcr.io/google-samples/whereami:v1.1.3
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: site-v1
  namespace: site-ns
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: site
    version: v1
  ports:
  - port: 8080
    targetPort: 8080
