examples/gke-gateway-controller/gateway.yaml
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: internal-http
  namespace: infra-ns
spec:
  gatewayClassName: gke-l7-rilb
  #addresses:
  #- type: "Named"
  #  value: "nameofmyreservedip"
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            shared-gateway-access: "true"
